UI-Komponenten verschoben